@@ -5,6 +5,9 @@ Date: ????
     - Removed some built-in presets that became redundant, as these mods now provide their own milestones preset: Full Pymods, Krastorio 2, Space Exploration, Bob's and Angel's
     - Removed several presets for mods that became outdated and won't be updated.
 
+  Bugfixes:
+    - Fixed crash when a valid item had an alias for a removed item (e.g. when installing then removing Bob's enemies)
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.5
 Date: 2025-05-29
